fix text centering the proper way

--- a/css/style.css
+++ b/css/style.css
@@ -861,6 +861,10 @@ textarea#message{
     width: 14.285714285714285714285714285714%;
     *width: 14.285714285714285714285714285714%;
   }
+  .col-md-1 {
+    width: 8.33333333%;
+    text-align:center;
+  }
 }
 
 /**
@@ -874,4 +878,7 @@ textarea#message{
     width: 14.285714285714285714285714285714%;
     *width: 14.285714285714285714285714285714%;
   }
+
+
 }
+
