--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,7 @@ p {
   font-family: 'Roboto', sans-serif;
   font-weight: 900;
   vertical-align: middle;
+  line-height: 130%;
 }
 
 .site-logo2 a.brand:hover {
