--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700,900);
 @import url('https://fonts.googleapis.com/css?family=Ek+Mukta:400,600,700');
 
+
 body {
     width: 100%;
     height: 100%;
@@ -333,6 +334,38 @@ p {
   text-align:center;
   color:#000;
   text-transform:uppercase;
+}
+
+img {
+  vertical-align: middle;
+}
+.img-responsive,
+.thumbnail > img,
+.thumbnail a > img,
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.img-rounded {
+  border-radius: 6px;
+}
+.img-thumbnail {
+  padding: 4px;
+  line-height: 1.42857143;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  -webkit-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  display: inline-block;
+  max-width: 100%;
+  height: auto;
+}
+.img-circle {
+  border-radius: 50%;
 }
 
 #portfolio .lead {
@@ -865,14 +898,58 @@ textarea#message{
   font-weight: bold;
 }
 
-@media (min-width: 768px){
-  .seven-cols .col-md-1,
+@media (min-width: 100px){
+  .seven-cols .col-md-1 {
+    width: 20%;
+    height: 150px;
+    float:left;
+    font-size: 15px;
+    align-items: center;
+    justify-content: center;
+    text-align:center;
+  }
   .seven-cols .col-sm-1,
   .seven-cols .col-lg-1  {
     width: 100%;
     *width: 100%;
   }
+  .twelve-cols .col-md-1 {
+    width: 20%;
+    height: 150px;
+    float:left;
+    font-size: 15px;
+    align-items: center;
+    justify-content: center;
+    text-align:center;
+  }
 }
+
+@media (min-width: 768px){
+  .seven-cols .col-md-1 {
+    width: 20%;
+    float:left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height:30px
+  }
+  .seven-cols .col-sm-1,
+  .seven-cols .col-lg-1  {
+    width: 100%;
+    *width: 100%;
+  }
+  .twelve-cols .col-md-1 {
+    width: 8%;
+    float:left;
+    display: flex;
+    font-size: 3;
+    align-items: center;
+    justify-content: center;
+    line-height:30px;
+  }
+  .twel
+}
+
 
 @media (min-width: 992px) {
   .seven-cols .col-md-1,
@@ -897,6 +974,7 @@ textarea#message{
   .seven-cols .col-lg-1 {
     width: 14.285714285714285714285714285714%;
     *width: 14.285714285714285714285714285714%;
+    text-align:center;
   }
 
 
