--- a/css/style.css
+++ b/css/style.css
@@ -915,12 +915,17 @@ textarea#message{
   }
   .twelve-cols .col-md-1 {
     width: 20%;
-    height: 150px;
+    height: 170px;
     float:left;
     font-size: 15px;
     align-items: center;
     justify-content: center;
     text-align:center;
+  }
+  .twelve-cols .col-md-1 .img-responsive {
+    display: block;
+    margin-left: auto;
+    margin-right: auto
   }
 }
 
@@ -931,23 +936,14 @@ textarea#message{
     display: flex;
     align-items: center;
     justify-content: center;
-    line-height:30px
+    line-height:30px;
   }
   .seven-cols .col-sm-1,
   .seven-cols .col-lg-1  {
     width: 100%;
     *width: 100%;
   }
-  .twelve-cols .col-md-1 {
-    width: 8%;
-    float:left;
-    display: flex;
-    font-size: 3;
-    align-items: center;
-    justify-content: center;
-    line-height:30px;
-  }
-  .twel
+
 }
 
 
@@ -961,6 +957,20 @@ textarea#message{
   .col-md-1 {
     width: 8.33333333%;
     text-align:center;
+  }
+  .twelve-cols .col-md-1 {
+    width: 16%;
+    float:left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height:20px;
+
+  }
+  .twelve-cols .col-md-1 .img-responsive {
+
+    width: 100px;
+    height: 100px;
   }
 }
 
